--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
     sdk: flutter 
   google_fonts: ^5.1.0
   font_awesome_flutter: ^10.5.0
-  fluttertoast: ^8.2.2   
+  fluttertoast: ^8.2.2
+  flutter_staggered_grid_view: ^0.7.0   
 
 dev_dependencies:
   flutter_test:
