--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter 
-  font_awesome_flutter: ^10.5.0  
+  font_awesome_flutter: ^10.5.0
+  sliding_clipped_nav_bar: ^3.1.0+4  
   google_fonts: ^5.1.0
   fluttertoast: ^8.2.2
   flutter_staggered_grid_view: ^0.7.0   
