--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter 
   font_awesome_flutter: ^10.5.0
+  flutter_pannable_rating_bar: ^2.7.2+1
   sliding_clipped_nav_bar: ^3.1.0+4  
   google_fonts: ^5.1.0
   fluttertoast: ^8.2.2
