--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,8 @@ dependencies:
   sliding_clipped_nav_bar: ^3.1.0+4  
   google_fonts: ^5.1.0
   fluttertoast: ^8.2.2
-  flutter_staggered_grid_view: ^0.7.0   
+  flutter_staggered_grid_view: ^0.7.0
+  sqflite: ^2.3.0   
 
 dev_dependencies:
   flutter_test:
@@ -35,3 +36,4 @@ flutter:
     - assets/farmerfresh/categoryimages/
     - assets/bankappui/
     - assets/tourismapp/
+    - assets/
