--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,14 @@ dependencies:
   google_fonts: ^5.1.0
   fluttertoast: ^8.2.2
   flutter_staggered_grid_view: ^0.7.0
-  sqflite: ^2.3.0   
+  sqflite: ^2.3.0
+  shared_preferences: ^2.2.1
+  google_maps_flutter: ^2.5.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  get: ^4.6.6
+  email_validator: ^2.1.17
+  cached_network_image:   
 
 dev_dependencies:
   flutter_test:
